[gd_scene load_steps=2 format=3 uid="uid://23n2eb50ld2y"]

[ext_resource type="Script" uid="uid://btvxk85ltn72i" path="res://Scripts/DiscardPile.gd" id="1_qf4os"]

[node name="DiscardPile" type="Control"]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
grow_vertical = 2
script = ExtResource("1_qf4os")

[node name="ViewDiscardPile" type="Button" parent="."]
layout_mode = 0
offset_right = 140.0
offset_bottom = 31.0
text = "View Discard Pile"

[node name="DiscardContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_top = 35.0
offset_right = 685.0
offset_bottom = 255.0

[node name="Label" type="Label" parent="DiscardContainer"]
layout_mode = 2
text = "Discard Pile :"

[node name="VBoxContainer" type="VBoxContainer" parent="DiscardContainer"]
layout_mode = 2

[node name="PlayerName" type="Label" parent="DiscardContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "PLAYER ONE"

[node name="AllCards" type="GridContainer" parent="DiscardContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="ViewDiscardPile" to="." method="_on_view_discard_pile_pressed"]
